--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "react-native-typescript-library-starter",
-  "version": "1.0.2",
-  "description": "Extremely easy to create a React Native Component Library with both Stateful and Functional Component Examples.",
+  "name": "react-native-monthly",
+  "version": "0.1.0",
+  "description": "Animated and customizable monthly calendar for React Native",
   "main": "./build/dist/index.js",
-  "repository": "git@github.com:WrathChaos/react-native-typescript-library-starter.git",
+  "repository": "git@github.com:WrathChaos/react-native-monthly.git",
   "author": "FreakyCoder <kurayogun@gmail.com>",
   "license": "MIT",
   "homepage": "https://www.freakycoder.com",
-  "bugs": "https://github.com/WrathChaos/react-native-typescript-library-starter/issues",
+  "bugs": "https://github.com/WrathChaos/react-native-monthly/issues",
   "keywords": [
+    "react-native-monthly",
+    "calendar",
+    "monthly-calendar",
+    "days",
+    "day",
+    "weeks",
     "FreakyCoder",
     "freakycoder",
     "kuray",
