--- a/example/package.json
+++ b/example/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@freakycoder/react-native-bounceable": "^0.2.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-native": "0.63.3"
   },
